# python_from_cpp

./: .CMakeLists.txt  Makefile  README.md  main_python.cpp
cmake-version/: CMakeLists.txt  README.md  main.cpp  my_module.py  setup.py
